add Windows specific frame reader capability using DirectShow
Needs further testing to figure out if DirectShow is required because Xuggler does not use DirectShow and seems to have problems with Video for Windows (vfwcap).

--- a/barcd/pom.xml
+++ b/barcd/pom.xml
@@ -37,7 +37,7 @@
   	<dependency>
       <groupId>xuggle</groupId>
       <artifactId>xuggle-xuggler</artifactId>
-      <version>5.2</version>
+      <version>5.4</version>
     </dependency>
   	<dependency>
   		<groupId>org.slf4j</groupId>
@@ -48,6 +48,13 @@
   		<groupId>org.boofcv</groupId>
   		<artifactId>boofcv</artifactId>
   		<version>0.12</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>de.humatic</groupId>
+  		<artifactId>dsj</artifactId>
+  		<version>0.8.64</version>
+  		<scope>system</scope>
+  		<systemPath>${project.basedir}/lib/dsj.jar</systemPath>
   	</dependency>
   </dependencies>
 </project>
