--- a/core/.project
+++ b/core/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>barcd</name>
+	<name>barcd-core</name>
 	<comment></comment>
 	<projects>
 	</projects>
