--- a/core/pom.xml
+++ b/core/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.tu_chemnitz.mi</groupId>
-  <artifactId>barcd</artifactId>
+  <artifactId>barcd-core</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>barcd</name>
+  <name>barcd-core</name>
   <description>Barcode extraction from images and videos.</description>
   <build>
     <sourceDirectory>src</sourceDirectory>
