--- a/app/pom.xml
+++ b/app/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>barcd-app</groupId>
+  <groupId>de.tu_chemnitz.mi.barcd</groupId>
   <artifactId>barcd-app</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <build>
@@ -18,7 +18,7 @@
   </build>
   <dependencies>
   	<dependency>
-  		<groupId>de.tu_chemnitz.mi</groupId>
+  		<groupId>de.tu_chemnitz.mi.barcd</groupId>
   		<artifactId>barcd-core</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
